[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "main"
path = "src/main.rs"
test = false
bench = false

[dependencies]
hashbrown = "0.17.0"
limine = "0.6.3"
spin = "0.10.0"
ab_glyph = { version = "0.2.32", default-features = false, features = ["libm"] }
talc = "5.0.3"
libm = "0.2.16"
[target.'cfg(target_arch="x86_64")'.dependencies]
x86_64 = "0.15.4"

[target.'cfg(target_arch="aarch64")'.dependencies]
aarch64-cpu = "11.2.0"
tock-registers = "0.10.1"
